--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -257,6 +257,7 @@
                         case ';)': s = ':blink:';    break;
                         case ':o': s = ':surprise:'; break;
                     }
+                    if (s.search('"') > -1) return [ null,s ];
                     let n = document.querySelector('[x-text-emote][x-text-insert-emote="' + s + '"]');
                     return [n ? n.getAttribute('x-text-emote') : null, s];
                 } );
