--- a/templates/ajax/game/town/dump.html.twig
+++ b/templates/ajax/game/town/dump.html.twig
@@ -1,6 +1,8 @@
 {% extends "ajax/game/town/town.html.twig" %}
 {% block content %}
 
+    <h1 class="page-head">{{'Müllhalde'|trans({}, 'buildings')}}</h1>
+
     <div class="help">
         {% trans from 'game' %}
             Auf der Müllhalde kannst du Gegenstände aus der Bank verwenden, um temporär die Verteidigung der Stadt zu verbessern.
