--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -192,6 +192,6 @@
     {% endif %}
 {% else %}
     <ul class="actions">
-        <li>{{ 'Du kannst keine Aktionen ausführen, während du dich versteckst.'|trans({},'game')  }}</li>
+        <li class="no-interaction">{{ 'Du kannst keine Aktionen ausführen, während du dich versteckst.'|trans({},'game')  }}</li>
     </ul>
 {% endif %}
