--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -31,6 +31,7 @@ h1.page-head {
 }
 
 *[disabled] { pointer-events: none; filter: saturate(0%) contrast(50%) brightness(110%); }
+*.no-interaction { pointer-events: none; }
 
 img.fit { width: 100%; }
 
