--- a/assets/less/modules/constructions.less
+++ b/assets/less/modules/constructions.less
@@ -130,7 +130,7 @@ div.buildings {
 }
 
 div.town-upgrades {
-  padding: 0; margin: 32px 0; border: 1px solid @myhordes-smalltext;
+  padding: 0; border: 1px solid @myhordes-smalltext;
 
   &>.row {
     .b-table();
