--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -33,6 +33,10 @@ div.town-banner {
     &.night { background: url("../../img/background/town/night_construction.jpg") center/cover no-repeat; }
   }
 
+  &.town-banner-upgrades {
+    background: url("../../img/background/town/upgrades.png") center/cover no-repeat;
+  }
+
   &.town-banner-door-open {
     background: url("../../img/background/beyond/city_open.jpg") center/cover no-repeat;
     &.night { background: url("../../img/background/beyond/night_city_open.jpg") center/cover no-repeat; }
