Adjust door tabs

--- a/templates/ajax/game/town/door_tabs.html.twig
+++ b/templates/ajax/game/town/door_tabs.html.twig
@@ -7,7 +7,7 @@
     </li>
     {% if has_battlement %}
         <li class="tab {% if door_section == 'nightwatch' %}selected{% endif %}">
-            <div class="tab-link" x-ajax-sticky x-ajax-href="{{ path('town_nightwatch') }}">{% trans from 'game' %}Wächt{% endtrans %}</div>
+            <div class="tab-link" x-ajax-sticky x-ajax-href="{{ path('town_nightwatch') }}">{% trans from 'game' %}Nachtwache{% endtrans %}</div>
         </li>
     {% endif %}
 </ul>
