--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -457,12 +457,14 @@
             {# @var next_level_req \App\Entity\BuildingPrototype #}
             <div class="row">
                 <div class="padded cell rw-5 rw-md-12">
-                    <button id="upgrade_home_level">
+                    <button id="upgrade_home_level" {% if devastated %}disabled{% endif %}>
                         <img alt="" src="{{ asset('build/images/icons/home.gif') }}" />
                         {% trans from 'game' %}Bauen{% endtrans %}: <b>{{ next_level.label|trans({}, 'buildings') }}</b>
                         {% if (next_level.ap > 0) %}(<div class="ap">{{ next_level.ap }}</div>){% endif %}
                     </button>
-                    {{ tooltip('<em>Du kannst dein Haus ausbauen und so für eine bessere Verteidigung sorgen. <strong>Wichtige Anmerkung:</strong> Vielleicht wäre es sinnvoller, die dafür benötigten Ressourcen (falls erforderlich) der Stadt zu spenden?</em>'|trans({}, 'game')) }}
+                    {% if not devastated %}
+                        {{ tooltip('<em>Du kannst dein Haus ausbauen und so für eine bessere Verteidigung sorgen. <strong>Wichtige Anmerkung:</strong> Vielleicht wäre es sinnvoller, die dafür benötigten Ressourcen (falls erforderlich) der Stadt zu spenden?</em>'|trans({}, 'game')) }}
+                    {% endif %}
                 </div>
                 <div class="padded cell rw-7 rw-md-12">
                     <div class="note">
@@ -537,7 +539,7 @@
                                                 <img alt="{{ res.prototype.label|trans({},'items') }}" src="{{ asset('build/images/item/item_' ~ res.prototype.icon ~ '.gif') }}" />
                                             {% endfor %}
                                         {% endif %}
-                                        <p><button x-upgrade-id="{{ id }}">
+                                        <p><button x-upgrade-id="{{ id }}" {% if devastated %}disabled{% endif %}>
                                             {% if upgrade_levels[id] == 0 %}
                                                 {% trans from 'game' %}Einbauen{% endtrans %}
                                             {% else %}
