--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -49,6 +49,7 @@
   i, em { color: #f0d79e; opacity: .7; }
   s, strike, del { opacity: .8; }
   span.bad { color: #ff4111; }
+  span.big { font-size: 1.2em; span.big { font-size: inherit; } }
   div.html { display: inline-block; }
 
   hr { border-color: @myhordes-smalltext }
@@ -72,6 +73,8 @@
       margin-top: 0;
     }
   }
+
+  ul,ol {clear:left;}
 
   blockquote {
     font-style: italic; border-color: rgba(0,0,0,.6); border-style: dashed; border-width: 0 0 1px 1px;
