--- a/templates/ajax/game/town/upgrades.html.twig
+++ b/templates/ajax/game/town/upgrades.html.twig
@@ -30,7 +30,7 @@
         </div>
     {% endif %}
 
-    <h5>{{ 'Diskussionen rund um die Verbesserung des Tages'|trans({},'game') }}</h5>
+    <h5 class="hide-sm">{{ 'Diskussionen rund um die Verbesserung des Tages'|trans({},'game') }}</h5>
     <div class="forum-preview-container fix-height hide-sm">
         <div id="forum-content">
             <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
