--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -589,7 +589,7 @@ div.help {
   &>p:first-child { margin-top: 0 }
   &>p:last-child { margin-bottom: 0 }
   color: white;
-  strong { color: #e2d890; }
+  strong, *.strong { color: #e2d890; }
 }
 
 div.hero-help {
