--- a/templates/ajax/game/town/workshop.html.twig
+++ b/templates/ajax/game/town/workshop.html.twig
@@ -10,16 +10,7 @@
         {% trans from 'game' %}
             In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind. Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.
         {% endtrans %}
-    </div>
-
-    {% if banished %}
-        <div class="note note-warning">
-            {% trans from 'game' %}
-                Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.
-            {% endtrans %}
-        </div>
-    {% else %}
-        <div class="note">
+        <i class="strong">
             {% trans with {'%ap%': '<div class="ap">' ~ need_ap ~ '</div>'} from 'game' %}
                 Jede Verarbeitung kostet %ap% (manche Gegenstände und Konstruktionen können diese Verarbeitungskosten senken).
             {% endtrans %}
@@ -30,14 +21,16 @@
                     </b></p>
                 <p><b></b></p>
             {% endif %}
+        </i>
+    </div>
+
+    {% if banished %}
+        <div class="note note-warning">
+            {% trans from 'game' %}
+                Du wurdest verbannt und kannst daher nicht länger in der Werkstatt arbeiten.
+            {% endtrans %}
         </div>
     {% endif %}
-
-    <div class="forum-preview-container fix-height hide-sm">
-        <div id="forum-content">
-            <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
-        </div>
-    </div>
 
     {% set has_recipes = false %}
     {% for recipe in recipes %}
@@ -47,29 +40,41 @@
     {% endfor %}
 
     {% if has_recipes %}
+        <div class="note note-critical">
+            {% trans from 'game' %}
+                Achte darauf, keine <strong>nutzlosen Ressourcen</strong> herzustellen! Wenn du dir nicht sicher bist, sieh in dem <strong>Forum</strong> hier unten nach...
+            {% endtrans %}
+        </div>
+
         <div class="row-table">
-        <div class="row header">
+        <div class="row-flex header bottom ">
             <div class="padded cell rw-2">
                 <span class="hide-md hide-sm">{% trans from 'game' %}Vorrat{% endtrans %}</span>
             </div>
-            <div class="padded cell rw-6 center">
+            <div class="padded cell rw-6 hide-desktop hide-lg center">
                 {% trans from 'game' %}Umwandlung{% endtrans %}
+            </div>
+            <div class="padded cell rw-3 hide-sm hide-md left">
+                {% trans from 'game' %}Material{% endtrans %}
+            </div>
+            <div class="padded cell rw-3 hide-sm hide-md left">
+                {% trans from 'game' %}Hergestellter Gegenstand{% endtrans %}
             </div>
             <div class="padded cell rw-2">
                 <span class="hide-md hide-sm">{% trans from 'game' %}Anzahl{% endtrans %}</span>
             </div>
-            <div class="padded cell rw-2 center">
+            <div class="padded cell rw-2 right">
                 <div class="ap">{{ need_ap }}</div>
             </div>
         </div>
         {% for recipe in recipes %}
             {# @var recipe \App\Entity\Recipe #}
             {% if source[recipe.id] > 0 %}
-                <div class="row">
-                    <div class="padded cell rw-1">
+                <div class="row-flex">
+                    <div class="padded cell rw-1 grow-0 shrink-0">
                         <span class="small">{{ source[recipe.id] }}</span>
                     </div>
-                    <div class="padded cell rw-1 right">
+                    <div class="padded cell rw-2 grow-0 shrink-0 right">
                         {% for entry in recipe.source.entries %}
                             {# @var entry \App\Entity\ItemGroupEntry #}
                             <span>
@@ -80,27 +85,27 @@
                                 </span>
                         {% endfor %}
                     </div>
-                    <div class="padded cell rw-1 center">
+                    <div class="padded cell rw-1 grow-0 shrink-0 center">
                         <img src="{{ asset('build/images/icons/small_move.gif') }}" alt="->" />
                     </div>
-                    <div class="padded cell rw-5 left">
+                    <div class="padded cell rw-4 grow-0 shrink-0 left" style="overflow: hidden">
                         {% if recipe.result.entries|length > 1 %}
                             <span class="small hide-desktop hide-lg">?</span>
-                            <span class="small hide-md hide-sm">{% trans from 'game' %}Zufälliger Gegenstand{% endtrans %}</span>
+                            <span class="small hide-md hide-sm" style="display: block; text-overflow: ellipsis; white-space: nowrap; overflow: hidden">{% trans from 'game' %}Zufälliger Gegenstand{% endtrans %}</span>
                         {% else %}
                             <img class="hide-desktop hide-lg" src="{{ asset('build/images/item/item_' ~ recipe.result.entries[0].prototype.icon ~ '.gif') }}" alt="{{ recipe.result.entries[0].prototype.label|trans({},'items') }}" />
-                            <span class="icon hide-md hide-sm">
+                            <span class="icon hide-md hide-sm" style="display: block; text-overflow: ellipsis; white-space: nowrap; overflow: hidden">
                                     <img src="{{ asset('build/images/item/item_' ~ recipe.result.entries[0].prototype.icon ~ '.gif') }}" alt="{{ recipe.result.entries[0].prototype.label|trans({},'items') }}" />
                                     {{ recipe.result.entries[0].prototype.label|trans({},'items') }}
                                 </span>
                         {% endif %}
                     </div>
-                    <div class="padded cell rw-1">
+                    <div class="padded cell rw-1 grow-0 shrink-0">
                         {% if recipe.result.entries|length == 1 %}
                             <span class="small">{{ result[recipe.id] }}</span>
                         {% endif %}
                     </div>
-                    <div class="padded cell rw-3">
+                    <div class="padded cell rw-3 grow-0 shrink-0">
                         <button {% if banished%}disabled{% endif %} x-recipe-id="{{ recipe.id }}"><img src="{% if recipe.action == "Zerlegen" %}{{ asset('build/images/item/item_classicKey.gif') }}{% elseif recipe.action == "Öffnen" %}{{ asset('build/images/item/item_can_opener.gif') }}{% else %}{{ asset('build/images/icons/small_refine.gif') }}{% endif %}" alt="" /><span class="hide-lg hide-md hide-sm">{{ recipe.action|trans({},'items') }}</span></button>
                     </div>
                 </div>
@@ -115,6 +120,14 @@
             </div>
         </div>
     {% endif %}
+
+    <h5 class="hide-sm">{{ 'Diskussionen im Werkstatt-Forum'|trans({},'game') }}</h5>
+    <div class="forum-preview-container fix-height hide-sm">
+        <div id="forum-content">
+            <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+        </div>
+    </div>
+
     <div class="row">
         <h5>{{ 'Werkstatt-Register'|trans({},'game') }}</h5>
         <div class="cell rw-12">
