--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -650,11 +650,7 @@ div.town-banner {
       }
 
       div#gazette-deaths {
-        top: 58%;
-        left: 10%;
-        font-size: 80%;
-        width: 65%;
-        height: 30%;
+        top: 58%; left: 10%; font-size: 80%; width: 65%; height: 30%; overflow-y: auto;
 
         &>div {
           padding-left: 10px;
