--- a/templates/ajax/admin/reports/reports.html.twig
+++ b/templates/ajax/admin/reports/reports.html.twig
@@ -103,7 +103,7 @@
                                 <span>{{ pm.post.privateMessageThread.title }}</span>
                             </div>
                             <div class="cell padded rw-2 rw-sm-12">
-                                <span>{{ pm.post.owner.user.name }}</span>
+                                <span>{{ pm.post.owner.name }}</span>
                             </div>
                             <div class="cell padded rw-1 rw-sm-12">
                                 <span>{{ pm.count }}</span>
