--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -160,6 +160,9 @@
                         <div class="cell padded rw-9 rw-md-6 rw-sm-12 mod">
                             <input type="checkbox" name="disablexml" id="disablexml" x-payload="disablexml" /> <label for="disablexml"><strong>{{'Kein XML Feed:'|trans({}, 'ghost')}}</strong> {{'XML Feed für diese Stadt deaktivieren'|trans({}, 'ghost')}}</label>
                         </div>
+                        <div class="cell padded rw-9 rw-md-6 rw-sm-12 mod">
+                            <input type="checkbox" name="citizenalias" id="citizenalias" x-payload="citizenalias" /> <label for="citizenalias"><strong>{{'Bürger-Aliase:'|trans({}, 'ghost')}}</strong> {{'Ermöglicht dem Bürger, einen Alias anstelle seines üblichen Benutzernamens zu wählen'|trans({}, 'ghost')}}</label>
+                        </div>
                     </div>
 
                     <h5>{{'Event-Stadt'|trans({}, 'ghost')}}</h5>
